update-manager (1:0.152.20) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - increase the default cache size on a multiarch system to
      avoid potential crash in natty apt (LP: #854090)
  * DistUpgrade/DistUpgradeController.py, UpdateManager/Core/utils.py:
    - do not leak password from sources.list entries into the logfile
      (LP: #839094)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200

update-manager (1:0.152.19) oneiric; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - do not use O_SYNC for the apt.log, its not important enough
      to justify the slowdown (LP: #852128)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Sep 2011 17:55:53 +0200

update-manager (1:0.152.18) oneiric; urgency=low

  [ Michael Vogt ]
  * debian/pycompat:
    - removed, no longer needed
  * debian/rules:
    - fix incorrect invocation of --with=python2
  
  [ Robert Roth ]
  * lp:~evfool/update-manager/handlewarning:
    - Only disconnect handler if it's still connected (LP: #133139)
  * lp:~evfool/update-manager/glibchangefix:
    - Call glib.markup_escape_text() correctly as per current 
      gir (don't pass in string length; LP: #832745)
  * lp:~evfool/update-manager/fixcopylink:
    - Fix the "Copy web link" context menu item of the ChangeLog viewer.
      It did not work before of some Gtk changes, now it does work. 
      Fixes LP: #831944.
  
  [ Stefano Rivera ]
  * extras is another special case where validTo=False (LP: #775694)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 11:47:10 +0200

update-manager (1:0.152.17) oneiric; urgency=low

  * debian/source-update_manager.py:  ask the reporter if their issue is
    regarding a distribution upgrade if so include log files (LP: #836846)

 -- Brian Murray <brian@ubuntu.com>  Mon, 29 Aug 2011 10:10:15 -0700

update-manager (1:0.152.16) oneiric; urgency=low

  * DistUpgrade/DevelReleaseAnnouncement:
    - prepare text for the beta release
